--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
     }
 
     .glass-box {
-      background: rgba(28, 28, 28, 0.11); /* Updated to c4c4c4 */
-      backdrop-filter: blur(20px);            /* 30% blur as 30px */
-      -webkit-backdrop-filter: blur(20px);
-      border-top: 1px solid rgba(255, 255, 255, 0.4); /* Top border only */
+      background: rgba(28, 28, 28, 0.109); /* Updated to c4c4c4 */
+      backdrop-filter: blur(30px);            /* 30% blur as 30px */
+      -webkit-backdrop-filter: blur(30px);
+      border: 1px solid rgb(255, 255, 255); /* Top border only */
       border-radius: 5px;  
       width: 100vw;
       height: 100vh;
